# FindWordInDictionary

./: config.txt  start.sh
include/: config.h  dictionary_utils.h  error.h  initialize_dict.h  logger.h  paginator.h  result.h  singleton.h  thread_RAII.h  utils.h
src/: CMakeLists.txt  config.cpp  dictionary_utils.cpp  error.cpp  initialize_dict.cpp  logger.cpp  main.cpp  result.cpp  utils.cpp
